--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -282,6 +282,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved as pickle file at mnist_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "# Load your trained model\n",
+    "MODEL_PATH = 'mnist_cnn_model.h5'  # Replace with your actual model file path\n",
+    "model = load_model(MODEL_PATH)\n",
+    "\n",
+    "# Save the model as a pickle file\n",
+    "PICKLE_PATH = 'mnist_model.pkl'\n",
+    "with open(PICKLE_PATH, 'wb') as f:\n",
+    "    pickle.dump(model, f)\n",
+    "\n",
+    "print(f\"Model saved as pickle file at {PICKLE_PATH}\")\n",
+    "\n",
+    "# To load the pickle file later\n",
+    "# with open(PICKLE_PATH, 'rb') as f:\n",
+    "#     loaded_model = pickle.load(f)\n",
+    "# print(\"Model loaded successfully from pickle file.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
